# 6.824-Distributed-Sys

Lab1_MapReduce/: CMakeLists.txt  README.md
Lab1_MapReduce/proto/: master.proto
Lab1_MapReduce/src/: master  master.cpp  master.hpp  master_service.cpp  master_service.hpp  server.cpp  worker  worker.cpp  worker.hpp
Lab1_MapReduce/testfiles/: mtiming.cpp
Lab1_MapReduce/tests/: crash.cpp  indexer.cpp  mrsequential  mrsequential.cpp  nocrash.cpp  rtiming.cpp  test-mr.sh  wc.cpp
Lab1_MapReduce/tests/mr-tmp/: mr-0-0  mr-0-1  mr-0-2  mr-0-3  mr-0-4  mr-0-5  mr-0-6  mr-0-7  mr-1-0  mr-1-1  mr-1-2  mr-1-3  mr-1-4  mr-1-5  mr-1-6  mr-1-7  mr-2-0  mr-2-1  mr-2-2  mr-2-3  mr-2-4  mr-2-5  mr-2-6  mr-2-7  mr-3-0  mr-3-1  mr-3-2  mr-3-3  mr-3-4  mr-3-5  mr-3-6  mr-3-7  mr-4-0  mr-4-1  mr-4-2  mr-4-3  mr-4-4  mr-4-5  mr-4-6  mr-4-7  (+32 more)
Lab3_Raft/src/: config.cpp  config.hpp  helper.cpp  helper.hpp  logger.hpp  persister.cpp  persister.hpp  raft.cpp  raft.hpp  threadpool.hpp
Lab3_Raft/src/rpc/: endpoint.hpp  labrpc.cpp  labrpc.hpp  server.hpp  service.hpp
Lab3_Raft/tests/: raft_tests.cpp
Lab4_KvRaft/: CMakeLists.txt
Lab4_KvRaft/src/: clerk.hpp  config.cpp  config.hpp  kvraft.hpp  kvserver.cpp  kvserver.hpp
Lab4_KvRaft/tests/: KV_test.cpp  models.hpp
Lab4_KvRaft/tests/porcupine/: bitset.hpp  checker.hpp  model.hpp  porcupine.hpp
